--- a/html_asterhouseLP202505/css/common.css
+++ b/html_asterhouseLP202505/css/common.css
@@ -9,9 +9,15 @@ img,ins,kbd,q,s,small,strike,strong,sub,sup,tt,var,b,u,i,center,
 dl,dt,dd,ol,ul,li,fieldset,form,label,legend,
 table,caption,tbody,tfoot,thead,tr,th,td,figure {
     margin: 0;padding: 0;border: 0;outline: 0;font-size: 100%;font-weight: normal;background: transparent;list-style: none;
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 img{vertical-align:top;}
-html {scroll-behavior: smooth;}
+html {
+    scroll-behavior: smooth;
+    -webkit-text-size-adjust: 100%;
+}
 
 
 .disply_none {display: none;}
@@ -137,6 +143,7 @@ html {scroll-behavior: smooth;}
 .tategaki {
 	writing-mode: vertical-rl;
 	-ms-writing-mode: tb-rl;
+	-webkit-writing-mode: vertical-rl;
 }
 
 /*--文章折返し時の右揃え--*/
@@ -144,6 +151,7 @@ html {scroll-behavior: smooth;}
 		display: inline-block;
 		text-align: justify;
 		text-justify: inter-ideograph;
+		-webkit-text-justify: inter-ideograph;
 		width: 100%;
 }
 
@@ -169,8 +177,11 @@ html {scroll-behavior: smooth;}
 	display: block;
 	position: fixed; /* 固定位置に変更 */
     top: -100px; /* 初期状態では非表示 */
+    -webkit-transition: top 1s ease; /* スムーズな移動とフェードイン */
     transition: top 1s ease; /* スムーズな移動とフェードイン */
     z-index: 1000;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
 }
 
 .sp {display: none;}
@@ -224,4 +235,20 @@ html {scroll-behavior: smooth;}
 
 .sp{
 	display: block;
+}
+
+@media screen and (max-width: 7067px) {
+    .sp {
+        display: inline-block !important;
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+    }
+}
+
+@media screen and (max-width: 7067px) {
+    .sp_img {
+        display: block;
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+    }
 }
